@@ -1,9 +1,9 @@
 6071edd604dbeb75308cfbedc7790398 *cleanup
 30a444c58adaf9b99783d22d75d60c61 *configure
 cad112e8e53af0dfd84b3ee1edf2f9f7 *DESCRIPTION
-44ee4ce3bc8da98187f9d163a191c6ad *inst/NEWS.Rd
+5d7e1654f28529d30baa213124b50051 *inst/NEWS.Rd
 a87b0f223435ed35607e8514562b8bfe *LICENSE
-5df28320757432a550ff962f2f1aed20 *man/charToFact.Rd
+6375b9e30533e0495b98f4b5b829706b *man/charToFact.Rd
 8f19a2c9feb2f352580fd4892650f285 *man/count.Rd
 d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
 1cce4277e2dd16a0f68c96d744b7bc17 *man/funique.Rd
@@ -15,21 +15,21 @@ d4128b3f90218c0efd0d4bbf0f84d6a5 *man/psum.Rd
 54f91d543a10f8c9aef7082da2b86de7 *man/topn.Rd
 3c628c2a27764ec5df2b4980921c310f *man/vswitch.Rd
 8960e9e411b8ff99c638d49e3f28e334 *NAMESPACE
-f6f779e6889ed47cc0643d6b38cc75ba *R/call.R
-fa0ca12018176564236efd16b8d8e9d8 *README.md
+7728e7607aa74519d3d3fde7fbd20ede *R/call.R
+34ba4d931a5bd0ba120ddef7e5327313 *README.md
 4826023c3ffe528db5e2af5db2a84b5a *src/dup.c
 e86a1960c335e7d534a4683b52d8b70c *src/dupLen.c
 84dc17b4330566e5beb69626ad9d268e *src/fpos.c
 c362509861cd6835c1d8adbb0dce02b4 *src/iif.c
 570337075c0d8e811f3de55d56b03210 *src/init.c
-e3ea9be2e32c5fb411216fd37cb882a4 *src/kit.h
+bcc4bddadebbcd229035336fcde51ff5 *src/kit.h
 63b898312ccf39a20bd7fbd8dcca5621 *src/Makevars.in
 95e3011e37d9dde0d75f3a3819b2acd3 *src/Makevars.win
 8e997b5d5d44af5cea7eafb48a4b9745 *src/nswitch.c
-44d12419075f21568aa9803fcee28c2e *src/psort.c
+ab9528d1b24d71ed2080743331b8a012 *src/psort.c
 44018b12fca6cccaabcd0f10deb421e4 *src/psum.c
 e998e820fea6aa677e78a8cb1f7ba74c *src/topn.c
 c0f3fe6fca4e8492277a0d5f87528ce5 *src/utils.c
 3476a1e2381bb86f68a72844ee61bc7b *src/vswitch.c
-f6e2cbfa7a0a372d9b09eb1dec27a9e7 *tests/test_kit.R
-8e26a0f73a772928778a7d15391001f4 *tests/test_kit.Rout.save
+26ba1d22f1256442535c287bade79be3 *tests/test_kit.R
+837d5d2f1781439182c1590a9d1cfc89 *tests/test_kit.Rout.save
